Added OK/Cancel buttons to SettingsCleaner and possibility to remove parameter from the list by double click

--- a/mandelbulber2/qt/settings_cleaner.ui
+++ b/mandelbulber2/qt/settings_cleaner.ui
@@ -13,7 +13,23 @@
   <property name="windowTitle">
    <string>Settings cleaner</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,0,0,0,1">
+  <property name="sizeGripEnabled">
+   <bool>false</bool>
+  </property>
+  <property name="modal">
+   <bool>false</bool>
+  </property>
+  <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,0,0,0,0,0,1,0">
+   <item>
+    <widget class="QLabel" name="label_4">
+     <property name="text">
+      <string>This tool looks for parameters which can be defaulted without impact on image appearance.</string>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
    <item>
     <layout class="QGridLayout" name="gridLayout" rowstretch="0,1">
      <item row="1" column="1">
@@ -77,7 +93,33 @@
     </widget>
    </item>
    <item>
+    <widget class="QLabel" name="label_3">
+     <property name="text">
+      <string>List of cleaned parameters:
+(double click to remove from list)</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QListWidget" name="listWidget"/>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QPushButton" name="pushButton_ok">
+       <property name="text">
+        <string>OK</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_cancel">
+       <property name="text">
+        <string>Cancel</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
