--- a/mandelbulber2/qt/dock_rendering_engine.ui
+++ b/mandelbulber2/qt/dock_rendering_engine.ui
@@ -334,6 +334,11 @@ function:</string>
             <string>Custom</string>
            </property>
           </item>
+          <item>
+           <property name="text">
+            <string>MaxAxis</string>
+           </property>
+          </item>
          </widget>
         </item>
         <item row="3" column="1" colspan="2">
